# otp

./: Makefile  configure
autom4te.cache/: output.0  traces.0
bootstrap/lib/hipe/ebin/: cerl_cconv.beam  (+42 more)
erts/: Makefile  config.h.in  config.status  configure
erts/autoconf/: win32.config.cache
erts/autom4te.cache/: output.0  traces.0
erts/emulator/beam/: #erl_db_util.c#  bif.tab  erl_bif_trace.c  erl_db_util.c1  erl_process.c  erl_process.h  erl_trace.c  global.h  io.c
erts/emulator/win32/: Makefile  beams.rc
erts/lib_src/win32/: Makefile
erts/start_scripts/: start_clean.script  start_sasl.script
erts/start_scripts/tmp/: erl_crash.dump
erts/win32/: config.h
lib/: config.status  configure  configure.in
lib/autom4te.cache/: output.0  traces.0
lib/common_test/: config.status  configure
lib/common_test/autom4te.cache/: output.0
lib/common_test/priv/win32/: Makefile
lib/crypto/c_src/win32/: Makefile
lib/diameter/: Makefile  config.status  configure
lib/diameter/autom4te.cache/: output.0  traces.0
lib/diameter/make/win32/: rules.mk
lib/erl_interface/: config.h.in  config.status  configure
lib/erl_interface/autom4te.cache/: output.0  traces.0
lib/erl_interface/src/win32/: Makefile  config.h
lib/gs/: config.status  configure
lib/gs/autom4te.cache/: output.0  traces.0
lib/ic/c_src/win32/: Makefile
lib/megaco/: config.status  configure
lib/megaco/autom4te.cache/: output.0  traces.0
lib/megaco/src/flex/win32/: Makefile
lib/odbc/: config.status  configure
lib/odbc/autom4te.cache/: output.0  traces.0
lib/odbc/c_src/win32/: Makefile
lib/orber/c_src/win32/: Makefile
lib/os_mon/c_src/win32/: Makefile
lib/runtime_tools/c_src/win32/: Makefile
lib/runtime_tools/priv/lib/win32/: dyntrace.exp  dyntrace.lib  trace_file_drv.exp  trace_file_drv.lib  trace_ip_drv.exp  trace_ip_drv.lib
lib/snmp/: config.status  configure
lib/snmp/autom4te.cache/: output.0
lib/test_server/src/: configure
lib/test_server/src/autom4te.cache/: output.0  traces.0
lib/tools/c_src/win32/: Makefile
lib/wx/: CONF_INFO  config.mk  configure
lib/wx/autom4te.cache/: output.0  traces.0
lib/wx/c_src/: Makefile
lib/wx/win32/: config.status
make/win32/: otp.mk  otp_ded.mk
(+2 files in other folders)
