dnl
dnl %CopyrightBegin%
dnl
dnl Copyright Ericsson AB 1999-2011. All Rights Reserved.
dnl
dnl The contents of this file are subject to the Erlang Public License,
dnl Version 1.1, (the "License"); you may not use this file except in
dnl compliance with the License. You should have received a copy of the
dnl Erlang Public License along with this software. If not, it can be
dnl retrieved online at http://www.erlang.org/.
dnl
dnl Software distributed under the License is distributed on an "AS IS"
dnl basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
dnl the License for the specific language governing rights and limitations
dnl under the License.
dnl
dnl %CopyrightEnd%
dnl

dnl Turn off caching
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl

dnl Process this file with autoconf to produce a configure script.
AC_INIT

dnl
dnl This is just to run configure in all applications that need it.
dnl

if test -z "$ERL_TOP" || test ! -d $ERL_TOP ; then
  AC_MSG_ERROR(You need to set the environment variable ERL_TOP!)
fi
erl_top=${ERL_TOP}
AC_CONFIG_AUX_DIRS($erl_top/erts/autoconf)

AC_ARG_ENABLE(bootstrap-only,
[  --enable-bootstrap-only enable bootstrap only configuration],
[ if test "X$enableval" = "Xyes"; then
     bootstrap_only=yes
  else
     bootstrap_only=no  
  fi	
],
bootstrap_only=no)

# Multiple versions of autoconf generates code that
# don't work on all platforms (e.g. SunOS 5.8) if
# sub directories are soft links. Internally at Ericsson
# some OTP application directories are soft links.
# An added "/." solves this problem.

test ! -f snmp/configure || AC_CONFIG_SUBDIRS(snmp/.)

if test $bootstrap_only = no; then

    test ! -f common_test/configure || AC_CONFIG_SUBDIRS(common_test/.)    test ! -f diameter/configure || AC_CONFIG_SUBDIRS(diameter/.)    test ! -f erl_interface/configure || AC_CONFIG_SUBDIRS(erl_interface/.)    test ! -f gs/configure || AC_CONFIG_SUBDIRS(gs/.)    test ! -f megaco/configure || AC_CONFIG_SUBDIRS(megaco/.)    test ! -f odbc/configure || AC_CONFIG_SUBDIRS(odbc/.)    test ! -f wx/configure || AC_CONFIG_SUBDIRS(wx/.)

fi

AC_OUTPUT
